--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,4 +114,16 @@
         android:textSize="15sp"
         android:textColor="@color/colorPrimary"/>
 
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="86dp"
+        android:hint="score"
+        android:text=""
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp" />
+
 </RelativeLayout>
