--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,15 @@
 
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/verify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp"
+        android:text="Verify"
+        android:onClick="verifySpeaker"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
